--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Mr.tong
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
+  Knowing how to motivate yourself can help you accomplish anything you set your mind to, so let’s get to that next with some quotes to inspire you. . You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 twitter_username: werty35169010
