--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,37 @@
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+# this means to ignore newlines until "baseurl:"
+# List of community-curated resources to find topical remote freelance & contract work for software developers, web designers, and more!
+# the subpath of your site, e.g. /blog
+# the base hostname & protocol for your site, e.g. http://example.com
+
+twitter_username: werty35169010
+github_username:  Ezees
+# google_analytics: 
+description:   List of community-curated resources to find topical remote freelance & contract work for software developers, web designers, and more!
+baseurl: "https://ezees.github.io/" 
+
+
 url: https://ezees.github.io
-title: ezees's blog
+title: ezees s blog
 author: jawolaray
 email: wertylaray@gmail.com
+twitter_username: werty35169010
+github_username:  Ezees
 layouts_dir: _layouts
 paginate: 6
-defaults:
-  -
-    scope:
-      path: ""
+# defaults:
+ 
+    # scope:
+    # path: ""
       type: "posts"
-    values:
+    # values:
       layout: "default"
-
+# Build settings
+markdown: kramdown
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
@@ -20,4 +40,27 @@ plugins:
   - jekyll-postcss
 
 postcss:
-  cache: false
+ # cache: false
+
+
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - yarn.lock
+  - package-lock.json
+  - README.md
+  - postcss.config.js
+  - .gitignore
