--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: ezees
 email: wertylaray@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  List of community-curated resources to find topical remote freelance & contract work for software developers, web designers, and more!.
 twitter_username: mrtong
-github_username: ezees
+github_username: Ezees
 minimal_mistakes_skin: default
 search: true
 
